--- a/08-March-2022/03-Function Practice Exercises.ipynb
+++ b/08-March-2022/03-Function Practice Exercises.ipynb
@@ -909,13 +909,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_primes(num):\n",
+    "    #Check for 0 and 1 as they are not conventionally prime\n",
     "    if num<2:\n",
     "        return 0\n",
+    "    # Solutions video suggest to use for else statement which is unique in python\n",
+    "    '''\n",
+    "    Solution as mentioned in the lecture\n",
+    "    primes=[2]\n",
+    "    x=3\n",
+    "    while x<=num:\n",
+    "      for y in range(3,x,2):\n",
+    "             if x%y==0:\n",
+    "                  x+=2\n",
+    "                  break\n",
+    "      else: \n",
+    "           primes.append(x)\n",
+    "           x+=2\n",
+    "     print(primes)\n",
+    "     return len(primes)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    '''\n",
     "    list1=range(2,num+1)\n",
     "    count=0\n",
     "    for x in list1:\n",
@@ -930,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +959,7 @@
        "25"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,13 +1000,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'abc': 3, 'aaa': 3, 'sample': 6}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print_big('a')"
+    "list1= ['abc','aaa','sample']\n",
+    "dict2= {x:len(x) for x in list1}\n",
+    "dict2"
    ]
   },
   {
