Updated the In[50] comment after understanding doubt

--- a/28-March-2022/todolist+list_to_set+person_class.ipynb
+++ b/28-March-2022/todolist+list_to_set+person_class.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c23591e",
+   "id": "ae8e233c",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "483c179b",
+   "id": "7e6e6625",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e97b1baf",
+   "id": "065b9f97",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "82d1025d",
+   "id": "163f78a9",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8977400d",
+   "id": "722de1b0",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "12bd7b7b",
+   "id": "47ebf196",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e0f59389",
+   "id": "a1027696",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f6aa5f13",
+   "id": "cb83648a",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "daeba3ab",
+   "id": "43117526",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c3063583",
+   "id": "0270c0cd",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6b4c2041",
+   "id": "f7e85e8d",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ccd266d9",
+   "id": "c15f4c08",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e9638c00",
+   "id": "ab10d259",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9bf1c29b",
+   "id": "ab1ea0e7",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "845d3d16",
+   "id": "cfb88189",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8d3980c8",
+   "id": "c5cf3f6f",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "8a012d84",
+   "id": "377fe59b",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "0af5a1e7",
+   "id": "f1fed8d0",
    "metadata": {},
    "outputs": [
     {
@@ -645,6 +645,7 @@
    ],
    "source": [
     "# Doubt in understanding the flow of this code\n",
+    "# Doubt resolved - Zip is a generator\n",
     "def Convert(a):\n",
     "    it = iter(a)\n",
     "    res_dct = dict(zip(it, it))\n",
@@ -658,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "4abd8c6b",
+   "id": "15dfafe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "747658e9",
+   "id": "b409fdf1",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "0c000bd8",
+   "id": "5afa548e",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44a32ce3",
+   "id": "c832710f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -755,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23bf409d",
+   "id": "f317dd3a",
    "metadata": {},
    "outputs": [],
    "source": []
